refactor(transformer): replace URI with URL in HtmlTransformer (#148)
Replace java.net.URI with java.net.URL throughout HtmlTransformer to
simplify URL resolution logic. Remove deprecated URI-based overloads and
eliminate the complex fallback path that manually reconstructed absolute
URLs when URISyntaxException was thrown. The URL class handles relative
URL resolution natively, making the code cleaner and more straightforward.

Co-authored-by: Claude Sonnet 4.6 <noreply@anthropic.com>